Fix top bar jumping issue

--- a/core/static/scss/_override.scss
+++ b/core/static/scss/_override.scss
@@ -1,3 +1,4 @@
+body { padding-top: 2.8125em; /* JavaScript will override this */ }
 img.logo { width: 80px; height: auto; }
 img.avatar { border-radius: 3px; }
 img.avatar.small { width: 1.6em; height: 1.6em; }
